<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_bar_navigation"
    app:startDestination="@id/profile_navigation_screen">

    <fragment
        android:id="@+id/profile_navigation_screen"
        android:name="cdi.interfacedesign.lolrankedtracker.screens.ProfileScreen"
        android:label="@string/profile_title"
        tools:layout="@layout/screen_player_profile">

        <action
            android:id="@+id/transition_profile_to_champions"
            app:destination="@+id/champions_navigation_screen"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left">
        </action>

        <action
            android:id="@+id/transition_profile_to_match_history"
            app:destination="@+id/match_history_navigation_screen"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left">
        </action>

    </fragment>

    <fragment
        android:id="@+id/champions_navigation_screen"
        android:name="cdi.interfacedesign.lolrankedtracker.screens.ChampionsScreen"
        android:label="@string/champions_title"
        tools:layout="@layout/screen_player_champions">

        <action
            android:id="@+id/transition_champions_to_profile"
            app:destination="@+id/profile_navigation_screen"
            app:enterAnim="@anim/enter_from_left"
            app:exitAnim="@anim/exit_to_right">
        </action>

        <action
            android:id="@+id/transition_champions_to_match_history"
            app:destination="@+id/match_history_navigation_screen"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left">
        </action>

    </fragment>

    <fragment
        android:id="@+id/match_history_navigation_screen"
        android:name="cdi.interfacedesign.lolrankedtracker.screens.MatchHistoryScreen"
        android:label="@string/match_history_title"
        tools:layout="@layout/screen_player_match_history">

        <action
            android:id="@+id/transition_match_history_to_profile"
            app:destination="@+id/profile_navigation_screen"
            app:enterAnim="@anim/enter_from_left"
            app:exitAnim="@anim/exit_to_right">
        </action>

        <action
            android:id="@+id/transition_match_history_to_champions"
            app:destination="@+id/champions_navigation_screen"
            app:enterAnim="@anim/enter_from_left"
            app:exitAnim="@anim/exit_to_right">
        </action>

    </fragment>

</navigation>