<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="@dimen/medium">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/queue_types"
                    android:textSize="@dimen/large"
                    android:textColor="@color/yellow_medium"
                    android:padding="@dimen/tiny">

                </TextView>

                <Spinner
                    android:id="@+id/spinner_queue_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tiers"
                    android:textSize="@dimen/large"
                    android:textColor="@color/yellow_medium"
                    android:padding="@dimen/tiny">

                </TextView>

                <Spinner
                    android:id="@+id/spinner_tier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_ranks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:visibility="invisible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ranks"
                    android:textSize="@dimen/large"
                    android:textColor="@color/yellow_medium"
                    android:padding="@dimen/tiny">

                </TextView>

                <Spinner
                    android:id="@+id/spinner_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <ImageButton
                android:id="@+id/leaderboard_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small"
                android:src="@drawable/search_button">

            </ImageButton>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderboard_ranked_cells"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>